--- a/sass/custom/_effect.sass
+++ b/sass/custom/_effect.sass
@@ -5,3 +5,54 @@
     100%
         opacity: 1
         transform: translateY(0)
+
+$cube:600px
+
+#propos
+    background: #000
+section
+    height: 800px
+.cube
+    margin: 12rem auto 0
+    width: $cube
+    height: $cube
+    transform-style: preserve-3d
+    transform: rotateY(30deg)  rotateZ(30deg)
+.side
+    position: absolute
+    opacity: 0.8
+    width: $cube
+    height: $cube
+
+#front
+    background: url(../assets/pics1.png) no-repeat center/cover
+    transform: translateZ(($cube) / 2)
+#top
+    background: url(../assets/pics2.png) no-repeat center/cover
+    transform: rotateX(-270deg) translateY(-1 *($cube) / 2)
+    transform-origin: top center
+#bottom
+    background: url(../assets/pics3.png) no-repeat center/cover
+    transform: rotateX(270deg) translateY(-1*($cube) / 2)
+    transform-origin: bottom center
+#right
+    background: url(../assets/pics4.png) no-repeat center/cover
+    transform: rotateY(-270deg) translateX($cube) / 2
+    transform-origin: top right
+#left
+    background: url(../assets/pics5.png) no-repeat center/cover
+    transform: rotateY(270deg) translateX(-1*($cube) / 2)
+    transform-origin: top left
+    
+#back
+    background: url(../assets/pics6.png) no-repeat center/cover
+    transform: rotateY(-180deg) translateZ($cube) / 2
+
+@keyframes spin 
+    form{
+        transform: rotateX(0) rotateY(0) rotateZ(0)
+    }
+    to {
+        transform: rotateX(360) rotateY(360) rotateZ(360)
+    }
+
