--- a/sass/style.css
+++ b/sass/style.css
@@ -42,4 +42,58 @@ h1 {
     opacity: 1;
     transform: translateY(0);
   }
-}/*# sourceMappingURL=style.css.map */
+}
+#propos {
+  background: #000;
+}
+
+.cube {
+  margin: 12rem auto 0;
+  width: 300px;
+  height: 300px;
+  transform-style: preserve-3d;
+  animation: spin 20s infinte linear;
+}
+
+.side {
+  position: absolute;
+  opacity: 0.8;
+  width: 300px;
+  height: 300px;
+}
+
+#front {
+  background: url(../assets/pics1.png) no-repeat center/cover;
+  transform: translateZ(calc(var(150px)));
+}
+
+#top {
+  background: url(../assets/pics2.png) no-repeat center/cover;
+  transform: rotateX(-270deg) translateY(calc(-1 * var(300px) / 2));
+  transform-origin: top center;
+}
+
+#bottom {
+  background: url(../assets/pics3.png) no-repeat center/cover;
+  transform: rotateX(270deg) translateY(calc(-1 * var(300px) / 2));
+  transform-origin: bottom center;
+}
+
+#right {
+  background: url(../assets/pics4.png) no-repeat center/cover;
+  transform: rotateY(-270deg) translateX(calc(-1 * var(300px) / 2));
+  transform-origin: top right;
+}
+
+#left {
+  background: url(../assets/pics5.png) no-repeat center/cover;
+  transform: rotateY(270deg) translateX(calc(-1 * var(300px) / 2));
+  transform-origin: top right;
+}
+
+#right {
+  background: url(../assets/pics6.png) no-repeat center/cover;
+  transform: rotateY(-180deg) translateZ(calc(-1 * var(300px) / 2));
+}
+
+/*# sourceMappingURL=style.css.map */
