--- a/sass/custom/_effect.sass
+++ b/sass/custom/_effect.sass
@@ -6,53 +6,61 @@
         opacity: 1
         transform: translateY(0)
 
-$cube:600px
+$cube:300px
 
-#propos
-    background: #000
-section
-    height: 800px
 .cube
     margin: 12rem auto 0
     width: $cube
     height: $cube
     transform-style: preserve-3d
-    transform: rotateY(30deg)  rotateZ(30deg)
+    transform: rotateY(30deg) rotateZ(30deg) rotateX(0deg)
+    animation: spin 5s infinite linear
 .side
     position: absolute
-    opacity: 0.8
+    opacity: 0.95
     width: $cube
     height: $cube
+    
 
 #front
     background: url(../assets/pics1.png) no-repeat center/cover
-    transform: translateZ(($cube) / 2)
+    backdrop-filter: blur(5px)
+    transform: translateZ(calc($cube / 2))
+
 #top
     background: url(../assets/pics2.png) no-repeat center/cover
-    transform: rotateX(-270deg) translateY(-1 *($cube) / 2)
+    backdrop-filter: blur(5px)
+    transform: rotateX(-270deg) translateY(calc(-1 *$cube) / 2)
     transform-origin: top center
+
 #bottom
     background: url(../assets/pics3.png) no-repeat center/cover
-    transform: rotateX(270deg) translateY(-1*($cube) / 2)
+    backdrop-filter: blur(5px)
+    transform: rotateX(270deg) translateY(calc($cube) / 2)
     transform-origin: bottom center
+
 #right
     background: url(../assets/pics4.png) no-repeat center/cover
-    transform: rotateY(-270deg) translateX($cube) / 2
+    backdrop-filter: blur(5px)
+    transform: rotateY(-270deg) translateX(calc($cube / 2))
     transform-origin: top right
+
 #left
     background: url(../assets/pics5.png) no-repeat center/cover
-    transform: rotateY(270deg) translateX(-1*($cube) / 2)
-    transform-origin: top left
+    backdrop-filter: blur(5px)
+    transform: rotateY(270deg) translateX(calc(-1 *$cube) / 2)
+    transform-origin: center left
     
 #back
     background: url(../assets/pics6.png) no-repeat center/cover
-    transform: rotateY(-180deg) translateZ($cube) / 2
+    backdrop-filter: blur(5px)
+    transform: rotateY(-180deg) translateZ(calc($cube / 2))
 
 @keyframes spin 
-    form{
+    from
         transform: rotateX(0) rotateY(0) rotateZ(0)
-    }
-    to {
+    
+    to 
         transform: rotateX(360) rotateY(360) rotateZ(360)
-    }
+    
 
