--- a/sass/style.css
+++ b/sass/style.css
@@ -43,57 +43,73 @@ h1 {
     transform: translateY(0);
   }
 }
-#propos {
-  background: #000;
-}
-
 .cube {
   margin: 12rem auto 0;
   width: 300px;
   height: 300px;
   transform-style: preserve-3d;
-  animation: spin 20s infinte linear;
+  transform: rotateY(30deg) rotateZ(30deg) rotateX(0deg);
+  animation: spin 5s infinite linear;
 }
 
 .side {
   position: absolute;
-  opacity: 0.8;
+  opacity: 0.95;
   width: 300px;
   height: 300px;
 }
 
 #front {
   background: url(../assets/pics1.png) no-repeat center/cover;
-  transform: translateZ(calc(var(150px)));
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  transform: translateZ(150px);
 }
 
 #top {
   background: url(../assets/pics2.png) no-repeat center/cover;
-  transform: rotateX(-270deg) translateY(calc(-1 * var(300px) / 2));
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  transform: rotateX(-270deg) translateY(-300px/2);
   transform-origin: top center;
 }
 
 #bottom {
   background: url(../assets/pics3.png) no-repeat center/cover;
-  transform: rotateX(270deg) translateY(calc(-1 * var(300px) / 2));
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  transform: rotateX(270deg) translateY(300px/2);
   transform-origin: bottom center;
 }
 
 #right {
   background: url(../assets/pics4.png) no-repeat center/cover;
-  transform: rotateY(-270deg) translateX(calc(-1 * var(300px) / 2));
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  transform: rotateY(-270deg) translateX(150px);
   transform-origin: top right;
 }
 
 #left {
   background: url(../assets/pics5.png) no-repeat center/cover;
-  transform: rotateY(270deg) translateX(calc(-1 * var(300px) / 2));
-  transform-origin: top right;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  transform: rotateY(270deg) translateX(-300px/2);
+  transform-origin: center left;
 }
 
-#right {
+#back {
   background: url(../assets/pics6.png) no-repeat center/cover;
-  transform: rotateY(-180deg) translateZ(calc(-1 * var(300px) / 2));
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  transform: rotateY(-180deg) translateZ(150px);
 }
 
-/*# sourceMappingURL=style.css.map */
+@keyframes spin {
+  from {
+    transform: rotateX(0) rotateY(0) rotateZ(0);
+  }
+  to {
+    transform: rotateX(360) rotateY(360) rotateZ(360);
+  }
+}/*# sourceMappingURL=style.css.map */
