--- a/sass/custom/_structure.sass
+++ b/sass/custom/_structure.sass
@@ -5,10 +5,12 @@ h2, h3, h4, .nav-items, #transition, footer
     text-align: center
 body
     color: white
-    background-color: #7a99ac
+    background-color: rgba(52, 15, 15, 0.968)
+
 /* *************** HEADER ************** */
+
 header
-    background: url(../assets/fondMain.jpg) no-repeat 50% 50%
+    background: url(../assets/fondMain.jpg) no-repeat
     background-size: cover
     height: 98vh
     border-radius: 0 0 20px 20px
@@ -17,11 +19,13 @@ header
 h1
     padding-top: 25%
     align-items: center
-    font-size: 4em
+    font-size: 3em
     color: #ffffff
     text-shadow: 3px 0px 0px #000
     animation: titre ease 5s
 
 /* ************* MAIN ************* */
-
+section
+    padding-top:5% 
+    padding-bottom: 2.5%
 
