cube fait mais problème de rotation

--- a/sass/custom/_structure.sass
+++ b/sass/custom/_structure.sass
@@ -1,31 +1,37 @@
 /* *************** GENERAL ************ */    
 html
     scroll-behavior: smooth
-h2, h3, h4, .nav-items, #transition, footer
-    text-align: center
 body
     color: white
-    background-color: rgba(52, 15, 15, 0.968)
-
+    background-color: rgba(31, 31, 31, 0.968)
+p
+    font-family: 'Tilt Neon', cursive
 /* *************** HEADER ************** */
 
 header
     background: url(../assets/fondMain.jpg) no-repeat
     background-size: cover
     height: 98vh
-    border-radius: 0 0 20px 20px
-    margin-bottom: 40px
-    backdrop-filter: blur(10px)
+    border-radius: 0 0 30% 30%
+
 h1
     padding-top: 25%
     align-items: center
     font-size: 3em
     color: #ffffff
-    text-shadow: 3px 0px 0px #000
+    text-shadow: 5px 2px 0px #133a05
     animation: titre ease 5s
+nav
+    box-shadow: 5px 5px 5px 5px #27700d
+
 
 /* ************* MAIN ************* */
 section
     padding-top:5% 
     padding-bottom: 2.5%
+    box-shadow: 5px 5px 5px 5px #27700d
 
+h2
+    font-family: 'Climate Crisis', cursive
+    font-size: 2em
+    text-shadow: 5px 2px 0px #3365bb
