--- a/sass/style.css
+++ b/sass/style.css
@@ -1,15 +1,15 @@
-/* *************** GENERAL ************ */    
+@import url("https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Tilt+Neon&display=swap"); /* *************** GENERAL ************ */    
 html {
   scroll-behavior: smooth;
 }
 
-h2, h3, h4, .nav-items, #transition, footer {
-  text-align: center;
-}
-
 body {
   color: white;
-  background-color: rgba(52, 15, 15, 0.968);
+  background-color: rgba(31, 31, 31, 0.968);
+}
+
+p {
+  font-family: "Tilt Neon", cursive;
 }
 
 /* *************** HEADER ************** */
@@ -17,10 +17,7 @@ header {
   background: url(../assets/fondMain.jpg) no-repeat;
   background-size: cover;
   height: 98vh;
-  border-radius: 0 0 20px 20px;
-  margin-bottom: 40px;
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
+  border-radius: 0 0 30% 30%;
 }
 
 h1 {
@@ -28,14 +25,25 @@ h1 {
   align-items: center;
   font-size: 3em;
   color: #ffffff;
-  text-shadow: 3px 0px 0px #000;
+  text-shadow: 5px 2px 0px #133a05;
   animation: titre ease 5s;
+}
+
+nav {
+  box-shadow: 5px 5px 5px 5px #27700d;
 }
 
 /* ************* MAIN ************* */
 section {
   padding-top: 5%;
   padding-bottom: 2.5%;
+  box-shadow: 5px 5px 5px 5px #27700d;
+}
+
+h2 {
+  font-family: "Climate Crisis", cursive;
+  font-size: 2em;
+  text-shadow: 5px 2px 0px #3365bb;
 }
 
 @keyframes titre {
@@ -62,51 +70,40 @@ section {
   opacity: 0.95;
   width: 12rem;
   height: 12rem;
+  border: 2px rgba(255, 4, 4, 0.5) solid;
 }
 
 #front {
   background: url(../assets/pics1.png) no-repeat center/cover;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
   transform: translateZ(6rem);
 }
 
 #top {
   background: url(../assets/pics2.png) no-repeat center/cover;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
   transform: rotateX(-270deg) translateY(-6rem);
   transform-origin: top center;
 }
 
 #bottom {
   background: url(../assets/pics3.png) no-repeat center/cover;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
   transform: rotateX(270deg) translateY(6rem);
   transform-origin: bottom center;
 }
 
 #right {
   background: url(../assets/pics4.png) no-repeat center/cover;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
   transform: rotateY(-270deg) translateX(6rem);
   transform-origin: top right;
 }
 
 #left {
   background: url(../assets/pics5.png) no-repeat center/cover;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
   transform: rotateY(270deg) translateX(-6rem);
   transform-origin: center left;
 }
 
 #back {
   background: url(../assets/pics6.png) no-repeat center/cover;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
   transform: rotateY(-180deg) translateZ(6rem);
 }
 
