--- a/sass/custom/_effect.sass
+++ b/sass/custom/_effect.sass
@@ -21,40 +21,35 @@ $cube:12rem
     opacity: 0.95
     width: $cube
     height: $cube
+    border: 2px  rgba(255, 4, 4, 0.5) solid
     
 
 #front
     background: url(../assets/pics1.png) no-repeat center/cover
-    backdrop-filter: blur(5px)
     transform: translateZ(calc($cube / 2))
 
 #top
     background: url(../assets/pics2.png) no-repeat center/cover
-    backdrop-filter: blur(5px)
     transform: rotateX(-270deg) translateY(calc(-1 *$cube / 2))
     transform-origin: top center
 
 #bottom
     background: url(../assets/pics3.png) no-repeat center/cover
-    backdrop-filter: blur(5px)
     transform: rotateX(270deg) translateY(calc($cube / 2))
     transform-origin: bottom center
 
 #right
     background: url(../assets/pics4.png) no-repeat center/cover
-    backdrop-filter: blur(5px)
     transform: rotateY(-270deg) translateX(calc($cube / 2))
     transform-origin: top right
 
 #left
     background: url(../assets/pics5.png) no-repeat center/cover
-    backdrop-filter: blur(5px)
     transform: rotateY(270deg) translateX(calc(-1 *$cube / 2))
     transform-origin: center left
     
 #back
     background: url(../assets/pics6.png) no-repeat center/cover
-    backdrop-filter: blur(5px)
     transform: rotateY(-180deg) translateZ(calc($cube / 2))
 
 @keyframes spin 
