--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,3 @@
+@import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Tilt+Neon&display=swap')
 @import "../sass/custom/_structure"
 @import "../sass/custom/_effect"
