--- a/sass/custom/_structure.sass
+++ b/sass/custom/_structure.sass
@@ -1,37 +1,65 @@
+
+/* *************** VARIABLES ********** */
+$primary-color:#3365bb
+$hr-color:#133a05
+$bg-color-primary:rgba(31, 31, 31, 0.968)
+$bg-color-opposite: #fff
+$font-height:2em
+$border-image:1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05
+
 /* *************** GENERAL ************ */    
 html
     scroll-behavior: smooth
 body
     color: white
-    background-color: rgba(31, 31, 31, 0.968)
+    background-color: $bg-color-primary
 p
     font-family: 'Tilt Neon', cursive
+    text-shadow: 1px 0px 0px $primary-color
+a
+    text-shadow: 12px solid $bg-color-opposite
 /* *************** HEADER ************** */
 
 header
-    background: url(../assets/fondMain.jpg) no-repeat
+    background: url(../assets/fondMain.jpg) no-repeat 
     background-size: cover
     height: 98vh
-    border-radius: 0 0 30% 30%
+    border-radius: 0 0 20% 20%
+    box-shadow: $border-image
+    img
+        box-shadow: $border-image
 
 h1
-    padding-top: 25%
+    padding-top: 22%
     align-items: center
-    font-size: 3em
-    color: #ffffff
-    text-shadow: 5px 2px 0px #133a05
+    font-size: $font-height*1.3
+    color: $bg-color-opposite
+    text-shadow: 5px 2px 0px $hr-color
     animation: titre ease 5s
 nav
-    box-shadow: 5px 5px 5px 5px #27700d
+    box-shadow:$border-image
 
 
 /* ************* MAIN ************* */
 section
     padding-top:5% 
     padding-bottom: 2.5%
-    box-shadow: 5px 5px 5px 5px #27700d
-
-h2
-    font-family: 'Climate Crisis', cursive
-    font-size: 2em
-    text-shadow: 5px 2px 0px #3365bb
+    .portfolio
+        background-color:$hr-color
+        margin-top: 1.5%
+        border-radius: 5%
+        box-shadow: $border-image
+    h2
+        font-size: 2em
+        text-shadow: 5px 2px 0px #3365bb
+h3
+    font-size: $font-height*2
+    padding-top: 2%
+    padding-bottom: 2%
+/* ************* FOOTER *********** */
+footer
+    img
+        height: 120px
+        width: 120px
+        border-radius: 50%
+        box-shadow: 5px 5px 5px 5px #27700d
