--- a/sass/style.css
+++ b/sass/style.css
@@ -6,24 +6,28 @@ html {
 }
 
 body {
+  margin-left: 2.5%;
+  margin-right: 2.5%;
   color: white;
   background-color: rgba(31, 31, 31, 0.968);
 }
 
 p {
+  font-size: 1.3em;
   font-family: "Tilt Neon", cursive;
   text-shadow: 1px 0px 0px #3365bb;
 }
 
 a {
-  text-shadow: 12px solid #fff;
+  color: #fff;
+  text-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05;
 }
 
 /* *************** HEADER ************** */
 header {
   background: url(../assets/fondMain.jpg) no-repeat;
   background-size: cover;
-  height: 98vh;
+  height: 90vh;
   border-radius: 0 0 20% 20%;
   box-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05;
 }
@@ -32,11 +36,11 @@ header img {
 }
 
 h1 {
-  padding-top: 22%;
+  padding-top: 17%;
   align-items: center;
-  font-size: 2.6em;
+  font-size: 3.2em;
   color: #fff;
-  text-shadow: 5px 2px 0px #133a05;
+  text-shadow: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb;
   animation: titre ease 5s;
 }
 
@@ -50,23 +54,36 @@ section {
   padding-bottom: 2.5%;
 }
 section .portfolio {
+  padding-bottom: 15%;
+  color: black;
+}
+h2 {
+  font-size: 4em;
+  text-shadow: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb;
+}
+
+h3 {
+  font-size: 2.4em;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  text-shadow: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb;
+}
+
+.container {
+  padding-bottom: 2%;
+}
+
+.portfolio {
   background-color: #133a05;
   margin-top: 1.5%;
   border-radius: 5%;
   box-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05;
 }
-section h2 {
-  font-size: 2em;
-  text-shadow: 5px 2px 0px #3365bb;
-}
-
-h3 {
-  font-size: 4em;
-  padding-top: 2%;
-  padding-bottom: 2%;
-}
 
 /* ************* FOOTER *********** */
+footer {
+  margin-bottom: 2%;
+}
 footer img {
   height: 120px;
   width: 120px;
@@ -74,6 +91,7 @@ footer img {
   box-shadow: 5px 5px 5px 5px #27700d;
 }
 
+/* ****** TITRE ****** */
 @keyframes titre {
   0% {
     opacity: 0;
@@ -84,55 +102,56 @@ footer img {
     transform: translateY(0);
   }
 }
+/* *********** CUBE ******** */
 .cube {
   margin: 2rem auto 2rem;
-  width: 12rem;
-  height: 12rem;
+  width: 13.5em;
+  height: 13.5em;
   transform: rotateY(30deg) rotateZ(30deg) rotateX(0deg);
+  animation: spin 4s infinite linear;
   transform-style: preserve-3d;
-  animation: spin 5s infinite linear;
 }
 
 .side {
   position: absolute;
   opacity: 0.95;
-  width: 12rem;
-  height: 12rem;
+  width: 13.5em;
+  height: 13.5em;
   border: 2px rgba(255, 4, 4, 0.5) solid;
 }
 
 #front {
   background: url(../assets/pics1.png) no-repeat center/cover;
-  transform: translateZ(6rem);
+  transform: translateZ(6.75em);
 }
 
 #top {
   background: url(../assets/pics2.png) no-repeat center/cover;
-  transform: rotateX(-270deg) translateY(-6rem);
+  transform: rotateX(-270deg) translateY(-6.75em);
   transform-origin: top center;
 }
 
 #bottom {
   background: url(../assets/pics3.png) no-repeat center/cover;
-  transform: rotateX(270deg) translateY(6rem);
+  transform: rotateX(270deg) translateY(6.75em);
   transform-origin: bottom center;
 }
 
 #right {
   background: url(../assets/pics4.png) no-repeat center/cover;
-  transform: rotateY(-270deg) translateX(6rem);
+  transform: rotateY(-270deg) translateX(6.75em);
   transform-origin: top right;
 }
 
 #left {
   background: url(../assets/pics5.png) no-repeat center/cover;
-  transform: rotateY(270deg) translateX(-6rem);
+  transform: rotateY(270deg) translateX(-6.75em);
   transform-origin: center left;
 }
 
 #back {
   background: url(../assets/pics6.png) no-repeat center/cover;
-  transform: rotateY(-180deg) translateZ(6rem);
+  transform: rotateY(-180deg) translateZ(6.75em);
 }
 
 @keyframes spin {
@@ -142,4 +161,16 @@ footer img {
   to {
     transform: rotateX(360) rotateY(360) rotateZ(360);
   }
+}
+.wave {
+  width: 12rem;
+  height: 12rem;
+  display: flex;
+  transition: transform 0.3s ease-out;
+}
+
+.wave:hover {
+  z-index: 3;
+  transform: scale(1.2);
+  font-weight: bold;
 }/*# sourceMappingURL=style.css.map */
