--- a/sass/custom/_effect.sass
+++ b/sass/custom/_effect.sass
@@ -8,14 +8,14 @@
         transform: translateY(0)
         
 /* *********** CUBE ******** */
-$cube:13.5em
+$cube:15em
 
 .cube
-    margin: 2rem auto 2rem
+    margin: 2em auto 2em
     width: $cube
     height: $cube
-    transform: rotateY(30deg) rotateZ(30deg) rotateX(0deg)
-    animation: spin 4s infinite linear
+    transform: rotateY(30deg) rotateX(30deg) rotateZ(30deg)
+    animation: spin 20s infinite linear
     transform-style: preserve-3d
 
 .side
@@ -29,46 +29,52 @@ $cube:13.5em
 #front
     background: url(../assets/pics1.png) no-repeat center/cover
     transform: translateZ(calc($cube / 2))
+    backdrop-filter: blur(5px)
 
 #top
     background: url(../assets/pics2.png) no-repeat center/cover
     transform: rotateX(-270deg) translateY(calc(-1 *$cube / 2))
     transform-origin: top center
+    backdrop-filter: blur(5px)
 
 #bottom
     background: url(../assets/pics3.png) no-repeat center/cover
     transform: rotateX(270deg) translateY(calc($cube / 2))
     transform-origin: bottom center
+    backdrop-filter: blur(5px)
 
 #right
     background: url(../assets/pics4.png) no-repeat center/cover
     transform: rotateY(-270deg) translateX(calc($cube / 2))
     transform-origin: top right
+    backdrop-filter: blur(5px)
 
 #left
     background: url(../assets/pics5.png) no-repeat center/cover
     transform: rotateY(270deg) translateX(calc(-1 *$cube / 2))
     transform-origin: center left
-    
+    backdrop-filter: blur(5px)
+
 #back
     background: url(../assets/pics6.png) no-repeat center/cover
     transform: rotateY(-180deg) translateZ(calc($cube / 2))
+    backdrop-filter: blur(5px)
 
 @keyframes spin 
     from
         transform: rotateX(0) rotateY(0) rotateZ(0)
     to 
-        transform: rotateX(360) rotateY(360) rotateZ(360)
-    
+        transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg)
+
 
 .wave
     width: 12rem
     height: 12rem
     display: flex
     transition: transform 0.3s ease-out
-
-
-.wave:hover 
-    z-index: 3
-    transform: scale(1.2)
-    font-weight: bold
+    &:hover 
+        z-index: 3
+        transform: scale(2)
+        font-weight: bold
+        backdrop-filter: blur(50px)
+        backdrop-filter: brightness(50%)
