--- a/sass/custom/_structure.sass
+++ b/sass/custom/_structure.sass
@@ -49,12 +49,16 @@ nav
 
 /* ************* MAIN ************* */
 section
+    margin-bottom: 5%
     padding-top:5% 
     padding-bottom: 2.5%
     .portfolio
-        padding-bottom: 15%
+        background-color:$hr-color
+        margin-top: 1.5%
+        border-radius: 5%
+        box-shadow: $border-image
         h5
-        color: black
+            color: black
 h2
     font-size: $font-height*2
     text-shadow:$border-title
@@ -65,14 +69,8 @@ h3
     padding-bottom: 2%
     text-shadow: $border-title
 
-.container
-    padding-bottom: 2%
 
-.portfolio
-    background-color:$hr-color
-    margin-top: 1.5%
-    border-radius: 5%
-    box-shadow: $border-image
+
 /* ************* FOOTER *********** */
 
 footer
