Problème Nav ouverte à l'accueil/ Portfolio non responsive

--- a/sass/custom/_effect.sass
+++ b/sass/custom/_effect.sass
@@ -75,6 +75,9 @@ $cube:15em
     &:hover 
         z-index: 3
         transform: scale(2)
+        transition-duration: 0.8s
+        positon: absolute
+        justify-content: center
         font-weight: bold
         backdrop-filter: blur(50px)
         backdrop-filter: brightness(50%)
