--- a/sass/style.css
+++ b/sass/style.css
@@ -179,6 +179,9 @@ footer img {
 .wave:hover {
   z-index: 3;
   transform: scale(2);
+  transition-duration: 0.8s;
+  positon: absolute;
+  justify-content: center;
   font-weight: bold;
   -webkit-backdrop-filter: blur(50px);
           backdrop-filter: blur(50px);
