--- a/sass/custom/_structure.sass
+++ b/sass/custom/_structure.sass
@@ -23,6 +23,10 @@ a
     color: #fff
     text-shadow: $border-image
 
+hr
+    z-index: 1
+    padding: 1%
+    text-shadow: $border-title
 
 /* *************** HEADER ************** */
 
@@ -59,9 +63,11 @@ section
         box-shadow: $border-image
         h5
             color: black
+
 h2
     font-size: $font-height*2
     text-shadow:$border-title
+    margin-bottom: 5%
 
 h3
     font-size: $font-height*1.2
