--- a/sass/style.css
+++ b/sass/style.css
@@ -23,6 +23,12 @@ a {
   text-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05;
 }
 
+hr {
+  z-index: 1;
+  padding: 1%;
+  text-shadow: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb;
+}
+
 /* *************** HEADER ************** */
 header {
   background: url(../assets/fondMain.jpg) no-repeat;
@@ -67,6 +73,7 @@ section .portfolio h5 {
 h2 {
   font-size: 4em;
   text-shadow: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb;
+  margin-bottom: 5%;
 }
 
 h3 {
@@ -100,6 +107,7 @@ footer img {
 }
 /* *********** CUBE ******** */
 .cube {
+  z-index: 3;
   margin: 2em auto 2em;
   width: 15em;
   height: 15em;
@@ -119,47 +127,47 @@ footer img {
 #front {
   background: url(../assets/pics1.png) no-repeat center/cover;
   transform: translateZ(7.5em);
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
 }
 
 #top {
   background: url(../assets/pics2.png) no-repeat center/cover;
   transform: rotateX(-270deg) translateY(-7.5em);
   transform-origin: top center;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
 }
 
 #bottom {
   background: url(../assets/pics3.png) no-repeat center/cover;
   transform: rotateX(270deg) translateY(7.5em);
   transform-origin: bottom center;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
 }
 
 #right {
   background: url(../assets/pics4.png) no-repeat center/cover;
   transform: rotateY(-270deg) translateX(7.5em);
   transform-origin: top right;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
 }
 
 #left {
   background: url(../assets/pics5.png) no-repeat center/cover;
   transform: rotateY(270deg) translateX(-7.5em);
   transform-origin: center left;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
 }
 
 #back {
   background: url(../assets/pics6.png) no-repeat center/cover;
   transform: rotateY(-180deg) translateZ(7.5em);
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
 }
 
 @keyframes spin {
@@ -171,20 +179,16 @@ footer img {
   }
 }
 .wave {
-  width: 12rem;
-  height: 12rem;
-  display: flex;
   transition: transform 0.3s ease-out;
 }
 .wave:hover {
   z-index: 3;
-  transform: scale(2);
+  transform: scale(1.3);
   transition-duration: 0.8s;
-  positon: absolute;
   justify-content: center;
   font-weight: bold;
-  -webkit-backdrop-filter: blur(50px);
-          backdrop-filter: blur(50px);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   -webkit-backdrop-filter: brightness(50%);
           backdrop-filter: brightness(50%);
 }/*# sourceMappingURL=style.css.map */
