--- a/sass/style.css
+++ b/sass/style.css
@@ -13,20 +13,19 @@ body {
 }
 
 p {
-  font-size: 1.3em;
+  font-size: 1em;
   font-family: "Tilt Neon", cursive;
   text-shadow: 1px 0px 0px #3365bb;
 }
 
 a {
   color: #fff;
-  text-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05;
+  text-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05, 0 0 25px #4dc024, 0 0 5px #133a05;
 }
 
 hr {
-  z-index: 1;
   padding: 1%;
-  text-shadow: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb;
+  color: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb, 0 0 25px #1366f7, 0 0 5px #3365bb;
 }
 
 /* *************** HEADER ************** */
@@ -35,10 +34,10 @@ header {
   background-size: cover;
   height: 90vh;
   border-radius: 0 0 20% 20%;
-  box-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05;
+  box-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05, 0 0 25px #4dc024, 0 0 5px #133a05;
 }
 header img {
-  box-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05;
+  box-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05, 0 0 25px #4dc024, 0 0 5px #133a05;
 }
 
 h1 {
@@ -46,12 +45,12 @@ h1 {
   align-items: center;
   font-size: 3.2em;
   color: #fff;
-  text-shadow: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb;
+  text-shadow: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb, 0 0 25px #1366f7, 0 0 5px #3365bb;
   animation: titre ease 5s;
 }
 
 nav {
-  box-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05;
+  box-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05, 0 0 25px #4dc024, 0 0 5px #133a05;
 }
 
 /* ************* MAIN ************* */
@@ -64,15 +63,15 @@ section .portfolio {
   background-color: #133a05;
   margin-top: 1.5%;
   border-radius: 5%;
-  box-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05;
+  box-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05, 0 0 25px #4dc024, 0 0 5px #133a05;
 }
 section .portfolio h5 {
   color: black;
 }
 
 h2 {
-  font-size: 4em;
-  text-shadow: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb;
+  font-size: 2.8em;
+  text-shadow: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb, 0 0 25px #1366f7, 0 0 5px #3365bb;
   margin-bottom: 5%;
 }
 
@@ -80,12 +79,12 @@ h3 {
   font-size: 2.4em;
   padding-top: 2%;
   padding-bottom: 2%;
-  text-shadow: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb;
+  text-shadow: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb, 0 0 25px #1366f7, 0 0 5px #3365bb;
 }
 
 /* ************* FOOTER *********** */
 footer {
-  margin-bottom: 2%;
+  margin-bottom: 15%;
 }
 footer img {
   height: 120px;
