--- a/sass/style.css
+++ b/sass/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 p {
-  font-size: 1em;
+  font-size: 1.6em;
   font-family: "Tilt Neon", cursive;
   text-shadow: 1px 0px 0px #3365bb;
 }
@@ -25,7 +25,7 @@ a {
 
 hr {
   padding: 1%;
-  color: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb, 0 0 25px #1366f7, 0 0 5px #3365bb;
+  color: #3365bb;
 }
 
 /* *************** HEADER ************** */
@@ -51,6 +51,10 @@ h1 {
 
 nav {
   box-shadow: 1px 1px 2px black, 0 0 25px #4dc024, 0 0 5px #133a05, 0 0 25px #4dc024, 0 0 5px #133a05;
+}
+
+.rounded-circle {
+  width: 70px;
 }
 
 /* ************* MAIN ************* */
@@ -82,6 +86,19 @@ h3 {
   text-shadow: 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb, 0 0 25px #1366f7, 0 0 5px #3365bb;
 }
 
+.card {
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  border-radius: 15px;
+  border-top: 1 px solid 1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb, 0 0 25px #1366f7, 0 0 5px #3365bb;
+}
+.card .content {
+  justify-content: center;
+  align-items: center;
+}
+.card .content .picture {
+  margin: 0 auto;
+}
 /* ************* FOOTER *********** */
 footer {
   margin-bottom: 15%;
@@ -182,9 +199,8 @@ footer img {
 }
 .wave:hover {
   z-index: 3;
-  transform: scale(1.3);
-  transition-duration: 0.8s;
-  justify-content: center;
+  transform: scale(1.1);
+  transition-duration: 0.2s;
   font-weight: bold;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
