--- a/sass/custom/_effect.sass
+++ b/sass/custom/_effect.sass
@@ -61,19 +61,9 @@ $cube:15em
     transform: rotateY(-180deg) translateZ(calc($cube / 2))
     backdrop-filter: blur(1px)
 
-@keyframes spin 
+@keyframes spin {
     from
         transform: rotateX(0) rotateY(0) rotateZ(0)
     to 
         transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg)
-
-
-.wave
-    transition: transform 0.3s ease-out
-    &:hover 
-        z-index: 3
-        transform: scale(1.1)
-        transition-duration: 0.2s
-        font-weight: bold
-        backdrop-filter: blur(5px)
-        backdrop-filter: brightness(50%)
+}
