--- a/sass/custom/_structure.sass
+++ b/sass/custom/_structure.sass
@@ -61,13 +61,18 @@ section
         margin-top: 1.5%
         border-radius: 5%
         box-shadow: $border-image
+        img
+            width: 18rem
         h5
             color: black
-
+#cards_landscape_wrap-2
+        background-color:$hr-color
+        margin-top: 1.5%
+        border-radius: 5%
+        box-shadow: $border-image
 h2
     font-size: $font-height*1.4
     text-shadow:$border-title
-    margin-bottom: 5%
 
 h3
     font-size: $font-height*1.2
@@ -75,17 +80,11 @@ h3
     padding-bottom: 2%
     text-shadow: $border-title
 
-.card
-    backdrop-filter: blur(10px)
-    border-radius: 15px
-    border-top: 1 px solid $border-title
-    .content
-        justify-content: center
-        align-items: center
-        .picture
-            margin: 0 auto
-            .img
-
+h5
+    font-size: $font-height
+    padding-top: 2%
+    padding-bottom: 2%
+    text-shadow: $border-image
 /* ************* FOOTER *********** */
 
 footer
