--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -1,29 +1,32 @@
 /*----  Main Style  ----*/
 #cards_landscape_wrap-2{
     text-align: center;
-    background: #F7F7F7;
+    background: #133a05;
 }
 #cards_landscape_wrap-2 .container{
-    padding-top: 80px; 
     padding-bottom: 100px;
 }
 #cards_landscape_wrap-2 a{
+    margin-top: 10%;
     text-decoration: none;
     outline: none;
 }
 #cards_landscape_wrap-2 .card-flyer {
     border-radius: 5px;
-    }
-    #cards_landscape_wrap-2 .card-flyer .image-box{
-    background: #ffffff;
+}
+#cards_landscape_wrap-2 .card-flyer .image-box{
+    background: #00acc1;
     overflow: hidden;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.50);
-    border-radius: 5px;
+    border-radius: 5%;
+}
+#cards_landscape_wrap-2 .card-flyer:hover .image-box{
+    box-shadow: 0px 15px 26px #8a0000;
 }
 #cards_landscape_wrap-2 .card-flyer .image-box img{
-    -webkit-transition:all .9s ease; 
-    -moz-transition:all .9s ease; 
-    -o-transition:all .9s ease;
+    -webkit-transition: all .9s ease; 
+    -moz-transition: all .9s ease; 
+    -o-transition: all .9s ease;
     -ms-transition:all .9s ease; 
     width: 100%;
     height: 200px;
@@ -43,7 +46,7 @@
     padding: 30px 18px;
 }
 #cards_landscape_wrap-2 .card-flyer{
-    background: #FFFFFF;
+    background: #fff;
     margin-top: 50px;
     -webkit-transition: all 0.2s ease-in;
     -moz-transition: all 0.2s ease-in;
@@ -53,8 +56,8 @@
     box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.40);
 }
 #cards_landscape_wrap-2 .card-flyer:hover{
-    background: #fff;
-    box-shadow: 0px 15px 26px rgba(0, 0, 0, 0.50);
+    background: #133a05;
+    box-shadow: 0px 15px 26px rgb(255, 0, 0);
     -webkit-transition: all 0.2s ease-in;
     -moz-transition: all 0.2s ease-in;
     -ms-transition: all 0.2s ease-in;
@@ -66,17 +69,24 @@
     margin-top: 10px;
     margin-bottom: 0px;
     padding-bottom: 0px; 
-    font-size: 14px;
+    font-size: 16px;
     letter-spacing: 1px;
-    color: #000000;
+    color: #000;
 }
 #cards_landscape_wrap-2 .card-flyer .text-box h6{
     margin-top: 0px;
     margin-bottom: 4px; 
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
     text-transform: uppercase;
     font-family: 'Roboto Black', sans-serif;
     letter-spacing: 1px;
-    color: #00acc1;
+}
+#cards_landscape_wrap-2 .card-flyer:hover .text-box h6{
+    color: #ff0000;
+    text-shadow:1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb, 0 0 25px #1366f7, 0 0 5px #3365bb;
+}
+#cards_landscape_wrap-2 .card-flyer:hover .text-box p{
+    color: #ff0000;
+    text-shadow:1px 1px 2px black, 0 0 25px #1366f7, 0 0 5px #3365bb, 0 0 25px #1366f7, 0 0 5px #3365bb;
 }
