--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -2,6 +2,9 @@
 #cards_landscape_wrap-2{
     text-align: center;
     background: #133a05;
+    box-shadow: 10px 20px 15px rgba(0, 0, 0, 0.5);
+    border-radius:5%;
+    margin-bottom: 3%;
 }
 #cards_landscape_wrap-2 .container{
     padding-bottom: 100px;
