--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -2,7 +2,7 @@
 #cards_landscape_wrap-2{
     text-align: center;
     background: #133a05;
-    box-shadow: 10px 20px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 5px 15px 15px 5px rgba(0, 0, 0, 0.5);
     border-radius:5%;
     margin-bottom: 3%;
 }
