problèmes de liens github

--- a/sass/custom/_structure.sass
+++ b/sass/custom/_structure.sass
@@ -30,7 +30,7 @@ hr
 /* *************** HEADER ************** */
 
 header
-    background: url(../assets/fondMain.jpg) no-repeat 
+    background: url('../assets/fondMain.jpg') no-repeat 
     background-size: cover
     height: 90vh
     border-radius: 0 0 20% 20%
