--- a/sass/custom/_effect.sass
+++ b/sass/custom/_effect.sass
@@ -28,36 +28,36 @@ $cube:15em
     
 
 #front
-    background: url(../assets/pics1.png) no-repeat center/cover
+    background: url('../assets/pics1.png') no-repeat center/cover
     transform: translateZ(calc($cube / 2))
     backdrop-filter: blur(1px)
 
 #top
-    background: url(../assets/pics2.png) no-repeat center/cover
+    background: url('../assets/pics2.png') no-repeat center/cover
     transform: rotateX(-270deg) translateY(calc(-1 *$cube / 2))
     transform-origin: top center
     backdrop-filter: blur(1px)
 
 #bottom
-    background: url(../assets/pics3.png) no-repeat center/cover
+    background: url('../assets/pics3.png') no-repeat center/cover
     transform: rotateX(270deg) translateY(calc($cube / 2))
     transform-origin: bottom center
     backdrop-filter: blur(1px)
 
 #right
-    background: url(../assets/pics4.png) no-repeat center/cover
+    background: url('../assets/pics4.png') no-repeat center/cover
     transform: rotateY(-270deg) translateX(calc($cube / 2))
     transform-origin: top right
     backdrop-filter: blur(1px)
 
 #left
-    background: url(../assets/pics5.png) no-repeat center/cover
+    background: url('../assets/pics5.png') no-repeat center/cover
     transform: rotateY(270deg) translateX(calc(-1 *$cube / 2))
     transform-origin: center left
     backdrop-filter: blur(1px)
 
 #back
-    background: url(../assets/pics6.png) no-repeat center/cover
+    background: url('../assets/pics6.png') no-repeat center/cover
     transform: rotateY(-180deg) translateZ(calc($cube / 2))
     backdrop-filter: blur(1px)
 
