--- a/sass/custom/_effect.sass
+++ b/sass/custom/_effect.sass
@@ -61,9 +61,9 @@ $cube:15em
     transform: rotateY(-180deg) translateZ(calc($cube / 2))
     backdrop-filter: blur(1px)
 
-@keyframes spin {
-    from
+@keyframes spin
+    0%
         transform: rotateX(0) rotateY(0) rotateZ(0)
-    to 
+    100% 
         transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg)
-}
+
